--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.12",
+    "@types/twemoji": "^12.1.2",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "twemoji": "^13.1.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
