--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "duotrigordle",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
