Reenable logging for nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 user nginx;
 worker_processes auto;
 
-error_log /dev/null crit;
+error_log logs/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
@@ -14,7 +14,7 @@ http {
 
     log_format main '"$request" $status $body_bytes_sent "$http_x_forwarded_for"';
 
-    access_log /dev/null main;
+    access_log logs/access.log main;
 
     sendfile on;
     #tcp_nopush     on;
