--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 user nginx;
 worker_processes auto;
 
-error_log logs/error.log warn;
+error_log /var/log/nginx/error.log notice;
 pid /var/run/nginx.pid;
 
 events {
@@ -14,7 +14,7 @@ http {
 
     log_format main '"$request" $status $body_bytes_sent "$http_x_forwarded_for"';
 
-    access_log logs/access.log main;
+    access_log /var/log/nginx/access.log main;
 
     sendfile on;
     #tcp_nopush     on;
