--- a/package.json
+++ b/package.json
@@ -4,23 +4,17 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.0",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.12",
-    "@types/twemoji": "^12.1.2",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@types/node": "^18.7.13",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "classnames": "^2.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
-    "twemoji": "^13.1.0",
-    "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "twemoji": "^14.0.2",
+    "typescript": "^4.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
