Scaffold header and welcome screen

--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "classnames": "^2.3.2",
-    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "sanitize.css": "^13.0.0",
     "twemoji": "^14.0.2"
   },
   "devDependencies": {
