--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
+    "lint": "eslint src",
+    "test": "vitest",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -20,9 +22,16 @@
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.33.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^4.6.4",
     "typescript-plugin-css-modules": "^4.1.1",
-    "vite": "^3.0.0"
+    "vite": "^3.0.0",
+    "vitest": "^0.28.3"
   }
 }
