--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "duotrigordle",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
