--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/?last-updated=2023-07-01",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
