Update theme color

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,6 +27,6 @@
   "id": "/",
   "start_url": "/?last-updated=2023-07-20",
   "display": "standalone",
-  "theme_color": "#49d088",
+  "theme_color": "#17171c",
   "background_color": "#17171c"
 }
