--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,11 @@
 {
   "short_name": "Duotrigordle",
   "name": "Duotrigordle",
+  "description": "Put your skills to the test and solve thirty-two Wordles at once! You have 37 guesses to solve all 32 words. A new Duotrigordle available each day to solve.",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "32x32",
       "type": "image/x-icon"
     },
     {
@@ -18,8 +19,9 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/?hotfix=1",
+  "id": "/",
+  "start_url": "/?last-updated=2023-07-10",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#17171c",
+  "background_color": "#17171c"
 }
